# auto_blog

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LESSONS_LEARNT.md  README.md  config.yaml  pyproject.toml  setup_cron.sh  start.sh
.github/workflows/: daily-pipeline.yml  monthly-cleanup.yml
data/: bookmarks.json
data/feedback/: 2026-02-26.json
data/raw/: 2026-02-20.json  2026-02-22.json  2026-02-23.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  2026-03-12.json  2026-03-14.json  2026-03-15.json  2026-03-16.json  2026-03-17.json  2026-03-18.json  2026-03-21.json  2026-03-22.json  2026-03-25.json  2026-03-26.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  (+22 more)
data/scored/: 2026-02-22.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  2026-03-12.json  2026-03-14.json  2026-03-15.json  2026-03-16.json  (+41 more)
docs/: cicd-workflow.md
src/: cli.py  logger.py  models.py  utils.py
tests/: conftest.py  test_cli.py  test_config_manager.py  test_data_service_enrich.py  test_dedup.py  test_logger.py  test_models.py  test_rules.py  test_scorer.py
(+1593 files in other folders)
