[project]
name = "auto-post-blog"
version = "0.1.0"
description = "自動收集 GenAI 新知，篩選高價值內容，產出部落格貼文草稿與個人 AI 筆記"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "feedparser>=6.0",
    "arxiv>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
autopb = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
